--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,7 +32,7 @@ html, body {
     
 }
 
-header{
+header {
     color: var(--cor2);
     background-color: var(--cor1);
 }
@@ -93,7 +93,7 @@ section {
 
 section > p {
     margin: auto;
-    text-align: justify;
+    text-align: center;
     max-width: 768px;
     font-family: var(--fonte-texto);
     font-size: 1.1em;
