--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -5,12 +5,10 @@
         font-size: 2em;
     }
     menu {
-        font-weight: bolder;
         font-size: 1.3em;
     }
     section > p {
-        text-align: center;
-        font-size: 1.3em;
+        font-size: 2.5vw;
       
     }
     footer {
@@ -28,8 +26,7 @@
         font-size: 1.5em;
     }
     section > p {
-        text-align: center;
-        font-size: 1.5em;
+        font-size: 2vw;
       
     }
     footer {
@@ -38,6 +35,3 @@
     }
 }
 
-@media screen and (min-width: 1200px) {
-    
-}
