--- a/estilos/style.css
+++ b/estilos/style.css
@@ -96,9 +96,10 @@ section > p {
     text-align: center;
     max-width: 768px;
     font-family: var(--fonte-texto);
-    font-size: 1.1em;
-    line-height: 2em;
-    padding: 20px;
+    font-size: 4vw;
+    line-height: 3em;
+    padding: 1vw;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.322);
 }
 
 section#normal {
