--- a/estilos/style.css
+++ b/estilos/style.css
@@ -56,11 +56,14 @@ header a:hover {
 header > p {
     font-size: 1.4em;
     padding-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
     font-weight: bolder;
 }
 
+header > p#Zag{
+    font-size: 2em;
+}
 
 menu {
     font-weight: bolder;
