--- a/estilos/projetos.css
+++ b/estilos/projetos.css
@@ -2,8 +2,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Martian+Mono&display=swap');
 
-
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family= Julee & display=swap');
 
 :root{
     --cor1: #2f344e2a;
@@ -69,11 +70,12 @@ header > p#Zag{
 menu {
     margin-top: 57px;
     display: inline-block;
+    height: 50px;
     font-weight: bolder;
     font-size: 1em;
 }
 
-li {
+header li {
     display: inline-block;  
     padding: 10px;
     padding-right: 20px;
@@ -82,7 +84,7 @@ li {
 
 }
 
-li:hover {
+header li:hover {
     background-color: var(--cor2);
     color: black;
 }
@@ -92,6 +94,48 @@ a {
 }
 
 main {
-    height: 100vh;
     background-color: var(--cor2);
+    padding-bottom: 30px;
+}
+
+main > a > div {
+    display: inline-block;
+    margin-left: 3%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    color: var(--cor3);
+    
+    text-align: center;
+    font-size: 40px;
+}
+
+main > div:hover {
+    background-color: rgba(0, 0, 0, 0.068);
+}
+
+div#python{
+    margin-left: 10%;
+}
+
+div#python > img {
+    width: 350px;
+    height: 350px;
+}
+
+div#login > img {
+    height: 350px;
+}
+
+footer {
+    background-color: #535f97d7;
+    text-align: center;
+    font-weight: bold;
+    color: var(--cor2);
+}
+footer > p > a {
+    color: var(--cor2);
+}
+
+footer> p > a:hover {
+    color: var(--cor3);
 }
