--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,7 +33,7 @@ html, body {
 }
 
 header {
-    height: 18vw;
+    height: 27.8%;
     color: var(--cor2);
     background-color: var(--cor1);
 }
@@ -41,7 +41,7 @@ header {
 header > h1 {
     font-family: var(--fonte-titulo);
     padding-top: 10px;
-    font-size: 3em;
+    font-size: 2em;
     text-align: center;
     
 }
@@ -55,7 +55,7 @@ header a:hover {
 }
 
 header > p {
-    font-size: 1.4em;
+    font-size: 1.3em;
     padding-top: 10px;
     margin-bottom: 10px;
     text-align: center;
@@ -63,13 +63,12 @@ header > p {
 }
 
 header > p#Zag {
-    font-size: 1.3em;
+    font-size: 1em;
 }
 
 menu {
-    display: inline-block;
     font-weight: bolder;
-    font-size: 1em;
+    font-size: 0.9em;
 }
 
 header li {
@@ -88,7 +87,6 @@ header li:hover {
 
 main {
     background-color: rgba(0, 0, 0, 0.5);
-    width: 100vw;
     margin: auto;
 }
 
